--- a/public/css/catalogCSS.css
+++ b/public/css/catalogCSS.css
@@ -8,6 +8,8 @@
     max-width: 450px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.15);
     color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .styled-table thead tr {
@@ -50,6 +52,9 @@
     font-size: 16px;
     resize: none;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   
   }
+
 
