--- a/public/css/indexCSS.css
+++ b/public/css/indexCSS.css
@@ -25,3 +25,69 @@
   .fa-shopping-cart:before {
     margin-left: 750px !important;
   }
+
+  .topnav {
+    overflow: hidden;
+    background-color: unset;
+    }
+    
+    .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    }
+    
+    
+    .topnav .search-containerbutton {
+    float: right;
+    margin-right: 40px;
+    }
+
+    .topnav .search-container {
+      float: right;
+      margin-right: 50px;
+      width: 250px;
+    }
+    
+    .topnav input[type=text] {
+    padding: 12px;
+    margin-top: 0px;
+    font-size: 17px;
+    border: none;
+    }
+    
+    .topnav .search-container button {
+    float: right;
+    padding: 0px 0px;
+    margin-top: 8px;
+    margin-right: 10px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    }
+    
+    .topnav .search-container button:hover {
+    background: #ccc;
+    }
+    
+    @media screen and (max-width: 600px) {
+    .topnav .search-container {
+      float: none;
+    }
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;  
+    }
+    }
