--- a/public/css/loginCSS.css
+++ b/public/css/loginCSS.css
@@ -267,3 +267,39 @@ input[type=text]:placeholder {
 * {
   box-sizing: border-box;
 }
+
+.form-container input[type=password]{
+  -webkit-animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+input[type=password] {
+  background-color: #ffffff;
+  border: none;
+  color: #0d0d0d;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  width: 85%;
+  border: 2px solid #030303;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=password]:focus {
+  background-color: rgb(254, 249, 249);
+  border-bottom: 2px solid #030303;
+}
+
+input[type=password]:placeholder {
+  color: #ededed;
+}
